Add groovy file